--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nathi",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A lightweight custom JavaScript library to create and manipulate HTML elements.",
-  "main": "dist/nathiLib.bundle.js",
+  "main": "./src/index.js",
   "scripts": {
     "build": "webpack --mode production",
     "test": "jest",
@@ -12,9 +12,11 @@
     "type": "git",
     "url": "git+https://github.com/Nattie-Nkosi/NathiLibrary.git"
   },
-  "files": [
-    "nathiLib.js",
-    "nathiLib.min.js"
+  "keywords": [
+    "javascript",
+    "library",
+    "dom",
+    "event"
   ],
   "author": "Nattie Nkosi",
   "license": "ISC",
