--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "nathi",
   "version": "1.1.2",
   "description": "A lightweight custom JavaScript library to create and manipulate HTML elements.",
-  "main": "./src/index.js",
+  "main": "./src/core/index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "test": "jest",
-    "minify": "terser nathiLib.js --compress --mangle --output nathiLib.min.js"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
