--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "build": "webpack --mode production",
     "test": "jest"
   },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.(js|jsx)?$": "babel-jest"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Nattie-Nkosi/NathiLibrary.git"
