--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest"
   },
   "jest": {
-    "testEnvironment": "jsdom",
+    "testEnvironment": "jest-environment-jsdom",
     "transform": {
       "^.+\\.(js|jsx)?$": "babel-jest"
     }
@@ -34,6 +34,7 @@
     "@babel/preset-env": "^7.21.4",
     "babel-loader": "^9.1.2",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "terser": "^5.17.1",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.2"
